_notes/errbyfile/O00000O0OO000.java.txt
ru\metaculture\protection\O00000O0OO000.java:281: error: W192 is not 
abstract and does not override abstract method 
createParticle(SimpleParticleType,ClientWorld,double,double,double,double,double,double) in ParticleFactory
   public static final class W192 implements ParticleFactory<SimpleParticleType> {
                       ^

  ru\metaculture\protection\O00000O0OO000.java:281: error: W192 is not 
abstract and does not override abstract method 
createParticle(SimpleParticleType,ClientWorld,double,double,double,double,double,double) in ParticleFactory
     public static final class W192 implements ParticleFactory<SimpleParticleType> {
                         ^
